# AVM

./: AVM  CMakeLists.txt  Makefile  author  example
headers/: IOperand.hpp  Lexer.hpp  OFactory.hpp  OperandType.h  Parser.hpp  TOperands.hpp
headers/Commands/: Add.hpp  Assert.hpp  Commands.hpp  CommandsSet.hpp  Div.hpp  Dump.hpp  Mod.hpp  Mul.hpp  Pop.hpp  Print.hpp  Push.hpp  Sub.hpp
src/: Lexer.cpp  OFactory.cpp  Parser.cpp  main.cpp
src/Commands/: Add.cpp  Assert.cpp  Commands.cpp  Div.cpp  Dump.cpp  Mod.cpp  Mul.cpp  Pop.cpp  Print.cpp  Push.cpp  Sub.cpp
